examples/bad/runtime_error_division_by_zero.ps
int i = 5, j;

while i > -5 {
    i = i - 1;
    print("trying div by: ");
    println(i);
    j = 10 / i;
}